--- a/style.css
+++ b/style.css
@@ -1,14 +1,21 @@
-#top-banner {
-  color : rgb(255,255,255);
-    font-size: 30px;
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
 
-  background-color: rgba(30,30,30,0.7);
+
+#top-banner {
+  color: rgb(255, 255, 255);
+  font-size: 30px;
+
+  background-color: rgba(30, 30, 30, 0.7);
   overflow: auto;
   text-align: center;
 }
 
-#top-banner-img{
-  float:right; 
+#top-banner-img {
+  float: right;
 }
 
 
@@ -16,39 +23,39 @@
 #menu {
   width: 260px;
   height: 100%;
-  border-right:1px solid #ccc;
+  border-right: 1px solid #ccc;
   font-family: "Lato";
   font-weight: normal;
   font-size: 18px;
   min-height: 500px;
-  background-color: rgba(30,30,30,0.7);
-  box-shadow: 3px 0px 5px rgba(0,0,0,.3);
-  position:absolute;
-  overflow:auto;
+  background-color: rgba(30, 30, 30, 0.7);
+  box-shadow: 3px 0px 5px rgba(0, 0, 0, .3);
+  position: absolute;
+  overflow: auto;
 }
 
 #menu .menu-button {
-  padding:0.01em 16px 8px;
+  padding: 0.01em 16px 8px;
   line-height: 45px;
   z-index: 5;
 }
 
 
-#menu .menu-button > a {
-  background-color:rgba(97,97,97,1);
-  color:#fff;
-  box-shadow: 1px 1px 4px rgba(0,0,0,.2);
+#menu .menu-button>a {
+  background-color: rgba(97, 97, 97, 1);
+  color: #fff;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, .2);
   cursor: pointer;
-  padding:4px 2px 4px 16px;
-  display:block;
-  -webkit-transition:all 0.3s ease,color 0.15s ease;
-  transition:all 0.3s ease,color 0.15s ease;
+  padding: 4px 2px 4px 16px;
+  display: block;
+  -webkit-transition: all 0.3s ease, color 0.15s ease;
+  transition: all 0.3s ease, color 0.15s ease;
   text-decoration: none;
 }
 
-#menu .menu-button > a:hover {
-  color:#000!important;
-  background-color:#FFFFFF!important;
+#menu .menu-button>a:hover {
+  color: #000 !important;
+  background-color: #FFFFFF !important;
   text-decoration: none;
 }
 
@@ -59,13 +66,14 @@
 }
 
 
-#top-banner, #menu {
-  border-color:#616161;
+#top-banner,
+#menu {
+  border-color: #616161;
 }
 
 
 #toggle-menu-button:hover {
-  color:#757575;
+  color: #757575;
 }
 
 #toggle-menu-button-label {
@@ -77,5 +85,3 @@
   margin-left: 300px;
   margin-top: 40px;
 }
-
-
